[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "taskgroup"
authors = [{name = "Thomas Grainger", email = "taskgroup@graingert.co.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["exceptiongroup", "typing_extensions>=4.8,<5"]

[project.urls]
Home = "https://github.com/graingert/taskgroup"
